--- a/ex01-par-impar.html
+++ b/ex01-par-impar.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercício 01</title>
     <script>
-        let num = Number(prompt('Digite um número:'))
+        let num = parseInt(prompt('Digite um número:'))
 
-        if (num % 2 === 0) {
-            alert('O número é par!')
+        if (isNaN(num)) {
+            alert('ERRO: O valor ' + '('+num+')' + ' informado não é número inteiro!')
         }
 
-        else if (num % 2 === 1){
-            alert('O número é ímpar!')
+        else if (num % 2 === 0) {
+            alert('O número ' + '('+num+')' + ' informado é PAR!')
         }
 
         else {
-            alert('ERRO: O valor informado não é um número!')
+            alert('O número ' + '('+num+')' + ' informado é ÍMPAR!')
         }
     </script>
 </head>
